@@ -14,6 +14,7 @@ CHANGES IN FLTK 1.3.0
 	  Fl_Value_Input, and Fl_Text_Display derived
           widgets (STR #1770)
         - Initial setup (STR #1904)
+	- winsock dll is dynamically loaded and by default ws2_32.dll, use of winsock1 is still possible by defining USE_WSOCK1 at compile time.
 
 
 CHANGES IN FLTK 1.1.9
